--- a/goco_blog/package.json
+++ b/goco_blog/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vssue/api-github-v3": "^1.0.0",
+    "@vssue/api-github-v4": "^1.0.0",
     "axios": "0.19.0",
     "bootstrap": "4.3.1",
     "core-js": "^2.6.5",
+    "vssue": "^1.0.0",
     "vue": "^2.6.10",
     "vue-axios": "2.1.4",
     "vue-router": "^3.0.3",
